0615 不太順，編譯器都不能用了……

--- a/dlll_cias_router/debian/precise/changelog
+++ b/dlll_cias_router/debian/precise/changelog
@@ -1,4 +1,4 @@
-zentyal-dlll_cias_router (3.4~1) saucy; urgency=low
+zentyal-dlll_cias_router (3.0) precise; urgency=low
 
   * New upstream release
 
